terra-time-input - Fix using delete/backspace key to navigate from minute input to hour input. Fix issue in Safari where the bottom border of the input is cut off.

--- a/packages/terra-time-input/src/TimeInput.scss
+++ b/packages/terra-time-input/src/TimeInput.scss
@@ -21,7 +21,7 @@
   display: inline-block;
   margin: 0;
   min-width: 2.1em;
-  padding: 0.178em 0;
+  padding: 0.179em 0;
   text-align: center;
   width: 2.1em;
 
